# corvi-saas

./: .env  .env.example  Makefile  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  e2e.yml
app/: config.py  deps.py  main.py  security.py
app/instrumentation/: events.py  logging.py
app/models/: __init__.py  models.py
app/routers/: auth.py  datasets.py  experiments.py
app/schemas/: __init__.py  datasets.py  experiments.py
app/services/: hpo_runner.py  s3.py
app/tests/: test_auth.py  test_datasets.py  test_experiments.py
app/workers/: celery_app.py  tasks.py
corvi_api/: Dockerfile  alembic.ini  app.py  app_simple.py  config.py  db.py  feature_gating.py  metrics_exporter.py  mlflow_sync.py  openapi_client_gen.sh  pyproject.toml  rbac.py  requirements.txt  s3.py  security.py  websocket_manager.py
corvi_api/alembic/: env.py
corvi_api/alembic/versions/: 0001_init_schema.py
corvi_api/models/: apikey.py  artifact.py  audit.py  dataset.py  experiment.py  job.py  metric.py  project.py  roi.py  subscription.py  user.py
corvi_api/routers/: __init__.py  admin.py  algorithms.py  artifacts.py  auth.py  billing.py  datasets.py  experiments.py  exports.py  features.py  health.py  jobs.py  metrics.py  orgs.py  projects.py  roi.py  usage.py  users.py
corvi_api/schemas/: artifact.py  auth.py
corvi_dashboard/: app.py
corvi_dashboard/templates/: base.html  export_pdf.html
corvi_frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.cjs.disabled  tsconfig.json  vite.config.ts
corvi_frontend/src/: App.tsx  index.css  main.tsx
corvi_sdk/: __init__.py  client.py  pyproject.toml  study.py
corvi_worker/: Dockerfile  config.py  pyproject.toml  queue.py  runner.py
corvi_worker/algorithms/: grid_search.py  random_search.py
corvi_worker/algorithms/corvi_opt/: bo.py  pruning.py
docs/: README.md  manual_admin.md  manual_user.md
infra/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml  nginx.conf  prometheus.yml
scripts/: build_frontend.ps1  build_frontend.sh  cli.py
(+27 files in other folders)
