[tool.poetry]
name = "corvi-api"
version = "0.1.0"
description = "Corvi ML Optimization API"
authors = ["Your Name <you@example.com>"]
packages = [{include = "corvi_api", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = "^5.3.4"
boto3 = "^1.34.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
mlflow = "^2.8.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
