[tool.poetry]
name = "corvi_api"
version = "0.1.0"
description = "Corvi FastAPI service"
authors = ["Aviarium Software"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
python-multipart = "^0.0.9"
boto3 = "^1.34.0"
mlflow = "^2.13.0"
alembic = "^1.13.2"
passlib = {extras=["bcrypt"], version="^1.7.4"}
pyjwt = "^2.8.0"
prometheus-client = "^0.20.0"
pika = "^1.3.2"
redis = "^5.0.4"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"

[tool.black]
line-length = 100